--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
+
 {
-  "name": "照顧指南速成工具（祐馨製作）_gai_gemini",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "care-guideline-tool",
+  "version": "1.0.0",
+  "description": "Caregiver assessment tool",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
   },
-  "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0"
+  "engines": {
+    "node": ">=18.0.0"
   },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+  "dependencies": {}
 }
