--- a/firebase.json
+++ b/firebase.json
@@ -14,15 +14,15 @@
     ],
     "headers": [
       {
-        "source": "**/*.tsx",
+        "source": "**/*.@(js|ts|tsx)",
         "headers": [
           {
             "key": "Content-Type",
             "value": "text/javascript; charset=utf-8"
           },
           {
-            "key": "X-Content-Type-Options",
-            "value": "nosniff"
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
           }
         ]
       }
