--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
-
 {
-  "name": "care-guideline-tool",
-  "version": "1.0.0",
-  "description": "Caregiver assessment tool",
-  "main": "server.js",
+  "name": "照顧指南速成工具（祐馨製作）_gai_gemini",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "engines": {
-    "node": ">=18.0.0"
+  "dependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "lucide-react": "0.460.0",
+    "path": "^0.12.7",
+    "url": "^0.11.4",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.2"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
+  }
 }
