--- a/firebase.json
+++ b/firebase.json
@@ -8,21 +8,21 @@
     ],
     "rewrites": [
       {
-        "source": "!**/*.@(js|ts|tsx|css|png|jpg|svg|ico|json)",
+        "source": "**",
         "destination": "/index.html"
       }
     ],
     "headers": [
       {
-        "source": "**/*.@(ts|tsx)",
+        "source": "**/*.@(js|ts|tsx)",
         "headers": [
           {
             "key": "Content-Type",
             "value": "text/javascript; charset=utf-8"
           },
           {
-            "key": "X-Content-Type-Options",
-            "value": "nosniff"
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
           }
         ]
       }
