feat: Enable TSX support for frontend development
Integrates Babel Standalone to allow for in-browser compilation of TSX files. This change also updates the `firebase.json` configuration to correctly serve `.ts` and `.tsx` files as JavaScript and removes unnecessary print-specific CSS rules from `index.html`.

--- a/firebase.json
+++ b/firebase.json
@@ -14,15 +14,11 @@
     ],
     "headers": [
       {
-        "source": "**/*.@(js|ts|tsx)",
+        "source": "**/*.@(ts|tsx)",
         "headers": [
           {
             "key": "Content-Type",
             "value": "text/javascript; charset=utf-8"
-          },
-          {
-            "key": "Cache-Control",
-            "value": "no-cache, no-store, must-revalidate"
           }
         ]
       }
