--- a/firebase.json
+++ b/firebase.json
@@ -14,11 +14,15 @@
     ],
     "headers": [
       {
-        "source": "**/*.@(ts|tsx)",
+        "source": "**/*.@(js|ts|tsx)",
         "headers": [
           {
             "key": "Content-Type",
             "value": "text/javascript; charset=utf-8"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
           }
         ]
       }
