--- a/firebase.json
+++ b/firebase.json
@@ -18,11 +18,7 @@
         "headers": [
           {
             "key": "Content-Type",
-            "value": "text/javascript; charset=utf-8"
-          },
-          {
-            "key": "Cache-Control",
-            "value": "no-cache, no-store, must-revalidate"
+            "value": "application/javascript; charset=utf-8"
           }
         ]
       }
