feat: Add placeholder build script
Introduces a placeholder `build` script to the package.json. This is a common practice for Node.js projects to have a build script, even if it's a no-op, for future compatibility with deployment pipelines and build tools.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
-
 {
   "name": "care-guideline-tool",
   "version": "1.0.0",
   "description": "Caregiver assessment tool",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'No build step required'"
   },
   "engines": {
     "node": ">=18.0.0"
