build: Update build script to no-op
The `build` script in `package.json` previously contained a placeholder echo
command indicating the build was skipped. This commit changes it to `true`,
which is a no-operation command that effectively achieves the same result
of skipping a build step while providing a valid exit code. This is a
cosmetic change to ensure the script executes cleanly.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'Build skipped: logic is handled in-browser via Babel'"
+    "build": "true"
   }
 }
