--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "care-guideline-tool",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "npm@9.0.0",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
