--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "npm@9.0.0",
   "engines": {
     "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "npm": "9.0.0"
   },
   "scripts": {
     "start": "node server.js",
