--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "true"
+    "build": "echo 'No build step required for static runtime'"
   }
 }
