feat: Update npm script and engines
Remove npm version requirement from engines and simplify dev script.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'No build step required for static runtime'"
+    "dev": "node server.js"
   }
 }
