feat: Add placeholder build script
Includes a no-op "build" script in package.json for potential future CI/CD integration or tooling compatibility. Removed the specific node engine version as it's less critical for this basic setup.

--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "care-guideline-tool",
   "version": "1.0.0",
   "private": true,
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build": "true"
   }
 }
