--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "build": "true"
+    "build": "mkdir -p build"
   }
 }
