feat: Add lucide-react and set NODE_ENV to production
Introduces the `lucide-react` library for icon components and explicitly sets the `NODE_ENV` to 'production' in `index.html`. This ensures that React and other dependencies run in optimized production mode, potentially improving performance. The `build` script in `package.json` is simplified as it previously only created a directory.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "build": "mkdir -p build"
+    "build": "true"
+  },
+  "dependencies": {
+    "lucide-react": "^0.460.0"
   }
 }
