--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "care-guideline-tool",
   "version": "1.0.0",
   "private": true,
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
