feat: Simplify build process and remove unused animations
Removes custom keyframes and animations from Tailwind CSS config as they are not used. Updates the build script in package.json to reflect that no build step is required for this CDN-based React application.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "build": "true"
+    "build": "echo 'No build step needed for CDN-based React app'"
   },
   "dependencies": {
     "lucide-react": "^0.460.0"
