refactor: Migrate to client-side rendering
The application has been refactored to utilize a pure client-side rendering approach. This change simplifies the build process and adapts the project for deployment environments that do not require server-side rendering.

Key changes include:
- Removing the Vite build configuration.
- Shifting application logic and React rendering to `index.html`.
- Updating `package.json` to reflect the removal of build dependencies.
- Modifying `server.js` to serve only `index.html`.

--- a/package.json
+++ b/package.json
@@ -2,16 +2,8 @@
   "name": "care-guideline-tool",
   "version": "1.0.0",
   "private": true,
-  "license": "MIT",
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "build": "echo 'No build step needed for CDN-based React app'"
-  },
-  "dependencies": {
-    "lucide-react": "^0.460.0"
+    "dev": "node server.js"
   }
 }
